--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 paho-mqtt
-hydra-core==0.11 # last compatible version with python2 https://hydra.cc/docs/intro/
+hydra-core==0.11 # last compatible version with python2 is 0.11 https://hydra.cc/docs/intro/
