--- a/services/mqtt-sensors.service
+++ b/services/mqtt-sensors.service
@@ -4,7 +4,7 @@ After=network.target
 Conflicts=getty@tty1.service
 
 [Service]
-ExecStart=/usr/bin/python3 -u sensors.py logging.level=INFO
+ExecStart=/usr/bin/env python3 -u sensors.py logging.level=INFO
 WorkingDirectory=${working_dir}
 StandardInput=tty-force
 User=pi
