--- a/services/thermoberry-mixer.service
+++ b/services/thermoberry-mixer.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=MQTT 1-Wire Sensor Module
+Description=Thermoberry Mixer Module
 After=network.target
 Conflicts=getty@tty1.service
 
 [Service]
-ExecStart=/usr/bin/env python3 -u sensors.py logging.level=INFO
+ExecStart=/usr/bin/env python3 -u mixer.py logging.level=INFO
 WorkingDirectory=${working_dir}
 StandardInput=tty-force
 User=pi
