--- a/services/thermoberry-mixer.service
+++ b/services/thermoberry-mixer.service
@@ -1,16 +1,14 @@
 [Unit]
 Description=Thermoberry Mixer Module
 After=network.target
-Conflicts=getty@tty1.service
 
 [Service]
-ExecStart=/usr/bin/env python3 -u mixer.py logging.level=INFO
+ExecStart=/usr/bin/env python3 mixer.py logging.level=INFO
 WorkingDirectory=${working_dir}
-StandardInput=tty-force
+StandardInput=null
+StandardOutput=journal+console
 User=pi
 Restart=always
-StandardError=inherit
-StandardOutput=inherit
 
 [Install]
 WantedBy=multi-user.target
