--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,23 +8,37 @@ version: "3.7"
 
 services:
 
-  # GPIO daemon https://github.com/zinen/docker-alpine-pigpiod
-  pigpiod:
+  # TODO: possible improvements are shown here https://github.com/zinen/docker-alpine-pigpiod/issues/17
+  pigpiod: # GPIO daemon https://github.com/zinen/docker-alpine-pigpiod
     image: zinen2/alpine-pigpiod:pigpio-v79
-    # privileged: true # save some trouble with accessing GPIOs
-    restart: always # Restarts does happened when binding to GPIOs fails. Auto restarting fixes most problems with hardware access.
-    devices:
-        - /dev/gpiochip0 # Grant access to GPIO device
-    # If above device access keeps failing, try setting container to run privileged. 
-    # Running privileged is never recommended. But it does fix many problems when access to hardware is required.
+    user: "0:0" # make sure to have root access rights
+    restart: unless-stopped # Restarts does happened when binding to GPIOs fails. Auto restarting fixes most problems with hardware access.
     privileged: true
     ports:
       - "8888:8888" # pigpiod daemon access 
+    devices:
+      - /dev/gpiochip0 # Grant access to GPIO device
+      - /dev/gpiochip1 # Grant access to GPIO device
+      - /dev/gpiomem # Grant access to GPIO device
+      - /dev/mem # Grant access to GPIO device
+      # If above device access keeps failing, try setting container to run privileged. 
+      # Running privileged is never recommended. But it does fix many problems when access to hardware is required.
+    volumes:
+      - ./pigpiod/start.sh:/start.sh:r # mount entrypoint
+    depends_on:
+      - node-red
+    entrypoint: /start.sh
+    # for pigpiod options see http://abyz.me.uk/rpi/pigpio/pigpiod.html
+    #  option -g will run the daemon in the foreground.
+    #  option -a 1 should assure that we are not using GPU memory.
+    #     for running on 64bit, don't include the '-a 1' flag https://github.com/zinen/docker-alpine-pigpiod/issues/17
+    #  option -s 10 reduces sample rate down every 10 micro seconds intead of default 5 https://github.com/joan2937/pigpio/issues/29#issuecomment-151076670
+    command: "pigpiod -g -s 10 -n localhost -n 192.168.1.38 -n node-red"
 
-  # MQTT Broker
-  mqtt:
+  mqtt: # MQTT Broker
     image: eclipse-mosquitto:2.0.18
     user: "${UID}:${GID}" # make sure the access rights to the files are equal to the hosts user
+    restart: unless-stopped # Restarts does happened when binding to GPIOs fails. Auto restarting fixes most problems with hardware access.
     ports:
       - 1884:1883
       - 9002:9001
@@ -32,12 +46,11 @@ services:
       - "./mosquitto/config:/mosquitto/config:r"
       - "./mosquitto/data:/mosquitto/data/:rw"
       - "./mosquitto/log:/mosquitto/log/:rw"
-
-  # Node Red https://nodered.org/docs/getting-started/docker
-  node-red:
+  
+  node-red: # Node Red https://nodered.org/docs/getting-started/docker
     image: nodered/node-red:3.1.3-18-minimal
-    # network_mode: "host"
     user: "${UID}:${GID}" # make sure the access rights to the files are equal to the hosts user
+    restart: unless-stopped # Restarts does happened when binding to GPIOs fails. Auto restarting fixes most problems with hardware access.
     environment:
       - TZ=Europe/Berlin
       - FLOWS=flows.json
@@ -51,7 +64,6 @@ services:
       - seccomp:unconfined # Solution for https://github.com/node-red/node-red-docker/issues/319
     depends_on:
       - mqtt
-      - pigpiod
     privileged: true
     volumes:
       - ./nodered:/data:rw # mount local repository
