--- a/nodered/package.json
+++ b/nodered/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "@flowfuse/node-red-dashboard": "~0.11.1",
         "node-red-contrib-config": "~1.2.1",
         "node-red-contrib-delay-topic-message": "~1.3.1",
         "node-red-contrib-ds18b20": "~0.0.3",
